добавил немного инфы

--- a/База знаний/Вопросы для собеса/БД.md
+++ b/База знаний/Вопросы для собеса/БД.md
@@ -33,6 +33,10 @@ link: https://habr.com/ru/articles/555920/
 ##### Виды индексов
 ##### B-Tree
 ##### GIN 
+##### Профилирование запросов
+##### Материальные представления
+##### Тригеры и встроенные функции
+##### Диспетчеры СУБД
 
 ## SQL
 ##### Что делают и отличия JOIN: 
