--- a/База знаний/Вопросы для собеса/ОС.md
+++ b/База знаний/Вопросы для собеса/ОС.md
@@ -4,6 +4,8 @@
 ##### Как узнать какая ОС на данный момент?
 ##### Что такое опакечивание?
 ##### Что такое виртуализация? Какие существуют инструменты виртуализации?
+##### Как процессор считает время?
+От старта системы ведется отсчет тиков процессора.
 ##### Базовые команды:
 ls - показать список файлов и директорий
 chmod - сменить права на доступ к файлу
