--- a/База знаний/Вопросы для собеса/Алгоритмы.md
+++ b/База знаний/Вопросы для собеса/Алгоритмы.md
@@ -1,2 +1,4 @@
 ## Нотация О
 ##### Как оценивается сложность алгоритмов в глубину и в ширину?
+##### Оценка затрат памяти по big O
+Как растет потребление памяти с увеличением входных данных?
