Разбил информацию по каталогам

--- a/База знаний/Для собеса/Процессы и потоки.md
+++ b/База знаний/Для собеса/Процессы и потоки.md
@@ -1,20 +1,28 @@
-#### Чем отличается процесс от потока?
+### Чем отличается процесс от потока?
+
 Процесс имеет свой уникальный PID; для передачи данных нужно использовать IPC; имеет свой отдельный GIL
-#### Какие возможные способы передачи данных между процессами?
+
+### Какие возможные способы передачи данных между процессами?
+
 `queue` - структура данных на диске или в оперативной памяти, которая хранит ссылки на сообщения и отдает их копии потребителям (consumers)
 `pipe` - создает канал между двумя процессами и возвращает два дескриптора файла. Дескриптор 0 открывается для чтения. Дескриптор 1 открывается для записи. Операция чтения получает данные в порядке их записи.
 `socket` - являются основой для работы с сетью в python, предоставляют возможность обмениваться данными между двумя программами через сеть
 `RPC` - удаленный вызов процедуры (Remote Procedure Call) часто используется в клиент-серверных приложениях или распределенных системах, где нескольким компьютерам необходимо взаимодействовать друг с другом. RPC используется в сетевых протоколах HTTP, NFS и DCOM
-#### PID (Process IDentifier)
+
+### PID (Process IDentifier)
 Идентификатор процесса - уникальный номер процесса в ОС
 в Windows - хранится в переменной целочисленного типа
 в Linux - хранится в переменной целочисленного типа
 в Unix-подобных ОС - часто имеется два специальных значения PID: swapper или sched - процесс с номером 0 (часто не отображается в списке), отвечает за выгрузку страниц и является частью ядра операционной системы. Процесс 1 - обычно является процессом init, ответственным за запуск и остановку системы. Также становится родительским процессом для процессов-сирот.
-#### IPC (Inter-Process Communication)
+
+### IPC (Inter-Process Communication)
+
 Межпроцессорное взаимодействие - обмен данными между потоками одного или разных процессов. Реализуется механизмами ядра ОС, осуществляется как на одном ПК, так и между сети.
 Механизмы ядра ОС - обмен сообщениями; синхронизации; разделения памяти; удалённых вызовов (RPC).
 Для оценки производительности механизмов IPC используют: пропускная способность (количество сообщений в единицу времени, которое ядро ОС или процесс способно обработать); задержки (время между отправкой сообщения одним потоком и его получением другим потоком).
-#### GIL (Global Interpreter Lock)
+
+### GIL (Global Interpreter Lock)
+
 Глобальная блокировка интерпретатора - способ синхронизации потоков в python
 Построен на концепции запрета в python в один момент времени выполнять больше одного потока
 Позволяет проще управлять выделением памяти для объектов в Python
