Разбил информацию по каталогам

--- a/База знаний/Для собеса/Python/Асинхронный код.md
+++ b/База знаний/Для собеса/Python/Асинхронный код.md
@@ -1,3 +1,31 @@
+### Конкурентность
+Выполнение нескольких задач в одно и то же время переключаясь (чередуясь) между выполнениями.
+
+```
+Задача 1:[-----]          [-]    [---]        [-------]
+Задача 2:       [--]   [-]                [--]
+Задача 3:           [-]      [--]     [--]
+```
+
+### Параллелизм
+Выполнение задач одновременно в один момент времени.
+
+```
+Задача 1:[-----]    [------------]      [-------]
+Задача 2:[--------]     [------]        [-----]
+Задача 3:[-]     [----]     [---]  [----------------]
+```
+
+>Параллелизм подразумевает конкурентность, но обратное верно не всегда.
+
+### Многозадачность
+
+#### Вытесняющая многозадачность
+
+
+
+#### Кооперативная многозадачность
+
 ### Принципы асинхронности в Python
 
 Асинхронность (кооперативная многозадачность) - код который выполняется в рамках одного потока и в рамках одного процесса.
