--- a/База знаний/Для собеса/Python/Концепция ООП.md
+++ b/База знаний/Для собеса/Python/Концепция ООП.md
@@ -8,7 +8,11 @@
 
 ### Какие базовые принципы ООП?
 
-- абстракция - в коде используем только те характеристика объекта, которые на важны в конкретном коде
+композиция?
+
+- абстракция - в коде используем только те характеристика объекта, которые не важны в конкретном коде
 - наследование - класс может строиться на основе другого класса, один класс дочерний, другой родительский, дочерний класс получает всё от родительского
 - инкапсуляция - в класс должны поместить все атрибуты и методы, которые связаны общей идеей; должны быть приватные (`startswith("__")`) или протектные (`startswith("_")`) методы и атрибуты, из класса не должно ничего торчать лишнего
 - полиморфизм - параметрический полиморфизм (утиная типизация) - функция, которая принимает некоторые аргументы и нужно чтобы этот аргумент умел все действия, которые мы у него используем. можем перегружать методы из дочернего класса, модифицируя их функционал 
+
+композиция: freeman
