--- a/База знаний/Для собеса/Python/Основы/5. Встроенные функции.md
+++ b/База знаний/Для собеса/Python/Основы/5. Встроенные функции.md
@@ -42,3 +42,25 @@ product = reduce((lambda x, y: x * y), [1, 2, 3, 4])  # product = 24
 Равные числовые значения имеют одинаковое значение хеш-функции, даже если они имеют разные типы, как в случае с `1` и `1.0`.
 
 Пользовательские типы могут переопределять метод `__hash__()`, результат которого будет использован при вызове функции `hash()`. Однако, следует помнить, что функция `hash()` обрезает значение в соответствии с битностью хоста.
+
+### Функция type()
+
+Используется обычно в двух вариантах: для определения типа объекта и для динамического определения класса.
+
+Определение типа объекта:
+```python
+type("hello")  # <class 'str'>
+```
+
+Динамическое определение класса:
+```python
+# for python 2.7:
+MyClass = type("MyClass", (object, ), dict(value="Hello!"))
+# for python 3:
+MyClass = type("MyClass", (), dict(value="Hello!"))
+
+my_class = MyClass()
+print(my_class.value)  # "Hello!"
+```
+
+Cледует помнить, что динамическое определение классов может привести к сложности поддержки и понимания кода, поэтому стоит стараться использовать статические классы, когда это возможно.
