--- a/База знаний/Для собеса/_!_ Чего не хватает.md
+++ b/База знаний/Для собеса/_!_ Чего не хватает.md
@@ -13,3 +13,21 @@ Local storage, cookies
 ### Управление нагрузкой
 
 Персинтилли и flame-graphs, прокси, брокеры
+
+garbage collector - 
+реализовано через подсчёт ссылок, 
+
+генератор
+
+фаст-апи - вызов тяжелой процедуры
+что такое пул - какие бывают 2 типа пулов
+евент луп
+
+очереди
+
+задание написать небольшое рестапи
+
+==============
+
+
+
