--- a/База знаний/Для собеса/Базы данных/Вопросы по БД.md
+++ b/База знаний/Для собеса/Базы данных/Вопросы по БД.md
@@ -1,3 +1,11 @@
+### Что такое база данных?
+
+База данных представляет собой структуру, где данные имеют связи между собой. Для управления такими данными используют специализированное программное обеспечение - СУБД (системы управления базами данных). Когда говорят о базах реляционного типа (RDBMS), то подразумевают, что данные и связи между данными организованы с помощью таблиц. Кроме непосредственных данных, в таких таблицах есть идентификаторы (id), а также первичные и вторичные ключи, которые имеют связи с идентификаторами.
+
+Работа СУБД предполагает выполнение определенных операций (создание, удаление, обновление и т. п.). Чтобы выполнение этих операций стало возможным, разработчики БД используют язык структурированных запросов SQL. Это язык стандарта ANSI/ISO, помогающий хранить данные и манипулировать ими в рамках какой-нибудь СУБД (MySQL, MSSQL, Oracle Database, IBM DB2 и пр.).
+
+Таким образом, SQL — стандартный язык запросов к реляционным базам данных.
+
 ### Как на уровне базы данных реализуется связь many-to-many?
 
 При помощи дополнительной таблицы, содержащей ключи на связанные таблицы
@@ -39,3 +47,13 @@
 ### Триггеры и встроенные функции
 
 ### Диспетчеры СУБД
+
+### третья нормальная форма
+
+### как строить индексы 
+
+### T-SQL
+
+https://otus.ru/journal/raznica-mezhdu-sql-i-t-sql/
+
+**T-SQL** — это расширенная версия SQL, и ее особенность заключается в том, что она предназначена для работы с сервером от Microsoft. Речь идет о базе данных **MS SQL** — **Microsoft SQL Server**. Вдобавок к этому, процедурное расширение с именем **T-SQL** характеризуется совместимостью с БД компании **Sybase** (Sybase ASE, Adaptive Server Enterprise).
